arrumado maps, feito mais um monte de telas

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,7 +12,6 @@
     <div class="titulos-container">
       <ion-title id="home-title">Bem-vindo ao Filamed</ion-title>
       <span id="home-title">{{data}}</span>
-     
     </div>
   </ion-toolbar>
 </ion-header>
@@ -26,7 +25,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-card (click)="irHospital()">
+        <ion-card (click)="irHospital()" class="card-home">
           <ion-card-content>
             <ion-list>
               <ion-item>
