--- a/src/app/pages/subpages/tela-logo/tela-logo.page.html
+++ b/src/app/pages/subpages/tela-logo/tela-logo.page.html
@@ -1,5 +1,5 @@
 <ion-content [fullscreen]="true">
- <div class="div-img">
-   <img src="../../../../assets/icons/filamed-sem-fundo.png" alt="">
+ <div class="div-img" id="splashContainer">
+   <img src="../../../../assets/icons/filamed-sem-fundo.png" alt="Filamed - Saúde">
  </div>
 </ion-content>
