--- a/src/app/pages/subpages/swipper/swipper.page.scss
+++ b/src/app/pages/subpages/swipper/swipper.page.scss
@@ -38,6 +38,18 @@ ion-toolbar {
   /* Remove padding-bottom se existir */
 
 }
+
+.carousel-inner-page-6 {
+  width: 45%;
+  height: 100%;
+          /* Ocupa 100% da altura */
+  /* Conteúdo em coluna */
+  /* Centraliza verticalmente */
+       /* Centraliza horizontalmente */
+  /* Remove padding-bottom se existir */
+
+}
+
 .carousel-inner-page-7{
     width: 100%;
     height: 100%;           /* Ocupa 100% da altura */
@@ -49,4 +61,17 @@ ion-toolbar {
 }
 #pageBotoes{
     align-items: center;
+}
+
+.ion-toolbar-swipper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+
+
+ion-buttons {
+  margin-left: auto;
 }
