--- a/src/global.scss
+++ b/src/global.scss
@@ -46,6 +46,8 @@
 
 //HTML GERAL
 
+
+
 *{
   font-family: "Red Hat Display", sans-serif;
 }
@@ -68,18 +70,34 @@ body {
   --ion-item-background: #fff;
 
   //toolbar
-  --ion-toolbar-background: #d8dde3;
+  --ion-toolbar-background: #e8e8e8;
   --ion-toolbar-color: #0e2b52;
 
 }
 
 //tab-bar
 ion-tab-bar {
-  --background: #d8dde3 !important;
-  --color: #0e2b52 !important;
-  --color-selected: #a4071a;
+  --background: #ccd5df !important;
+  --color: #0e2b5288 !important;
+  --color-selected: #0e2b52;
 
 }
+
+//spinner de carregamento
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  ion-spinner {
+    width: 64px;
+    height: 64px;
+    color: #0e2b52;
+  }
+}
+//fim do spinner
+
 //FIM DO HTML GERAL
 
 
@@ -166,7 +184,7 @@ ion-tab-bar {
   font-weight: 700;
   color: #0e2b52;
 }
-ion-card {
+.card-home {
   transform: scale(0.9);
   background-color: #fff;
   border: 3px solid #0e2b52;
@@ -584,7 +602,7 @@ ion-button,
   height: 15px;
   position: absolute;
   top: 52%;
-  left: 22%;
+  left: 24%;
   transform: translate(-50%, -50%);
   transform: rotate(-20deg);
   z-index:2; /* Número MAIOR que o pai */
@@ -599,7 +617,7 @@ ion-button,
   span{
     font-weight: 800;
   }
-  
+  margin-top: 15%;
 }
 .carousel-footer-page-3{
     font-size: 20px;
@@ -607,7 +625,7 @@ ion-button,
     span{
     font-weight: 800;
   }
- 
+  margin-bottom: 25%;
 }
 //fim dos letreiros
 
@@ -627,7 +645,7 @@ ion-button,
   height: 15px;
   position: absolute;
   top: 52%;
-  left: 38%;
+  left: 47%;
   transform: translate(-50%, -50%);
   transform: rotate(-20deg);
   z-index:2; /* Número MAIOR que o pai */
@@ -642,7 +660,7 @@ ion-button,
   span{
     font-weight: 800;
   }
-  
+  margin-top: 25%;
 }
 .carousel-footer-page-4{
     font-size: 20px;
@@ -650,7 +668,7 @@ ion-button,
     span{
     font-weight: 800;
   }
- 
+  margin-bottom: 30%;
 }
 //fim dos letreiros
 
@@ -671,7 +689,7 @@ ion-button,
   height: 15px;
   position: absolute;
   top: 52%;
-  left: 55%;
+  left: 72%;
   transform: translate(-50%, -50%);
   transform: rotate(-20deg);
   z-index:2; /* Número MAIOR que o pai */
@@ -686,7 +704,7 @@ ion-button,
   span{
     font-weight: 800;
   }
-  
+  margin-top: 20%;
 }
 .carousel-footer-page-5{
     font-size: 20px;
@@ -694,7 +712,7 @@ ion-button,
     span{
     font-weight: 800;
   }
- 
+  margin-bottom: 25%;
 }
 //fim dos letreiros
 
@@ -710,19 +728,67 @@ ion-button,
 }
 
 //
-.dedo-apontado-6{
-  width: 15px;
-  height: 15px;
-  position: absolute;
-  top: 52%;
-  left: 75%;
-  transform: translate(-50%, -50%);
-  transform: rotate(-20deg);
-  z-index:2; /* Número MAIOR que o pai */
-  font-size: 48px;
-  color: #0e2b52;
+.ion-toolbar-swipper{
+  width: 100%;
+  height: 60px;
+  background-color: #d8dde3;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  .titulos-container-swipper{
+    
+    width: 80%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #0e2b52;
+    #welcome-filamed{
+      font-size: 14px;
+    }
+    #span-filamed{
+      font-size: 12px;
+      
+    }
+  }
 }
+.popover-swipper{
+    width: 220px;
+    height: max-content;
+    background-color: #fff;
+    position: absolute;
+    top: 57%;
+    left: 58%;
+    transform: translate(-50%, -50%);
+    z-index:2;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    ion-list > ion-item{
+      font-size: 16px;
+    }
+    scale: 0.7;
+}
+#seta-light{
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  top: 59%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  z-index:3;
+  transform: rotate(-15deg);
 
+}
+#seta-dark{
+  display: none;
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  top: 59%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  z-index:3;
+  transform: rotate(-15deg);
+}
 //letreiros
 .carousel-title-page-6{
   font-size: 20px;
@@ -730,15 +796,16 @@ ion-button,
   span{
     font-weight: 800;
   }
-  
+  margin-top: 30%;
 }
 .carousel-footer-page-6{
-    font-size: 20px;
+    font-size: 14px;
     text-align: center;
     span{
     font-weight: 800;
   }
- 
+  margin-top: 25%;
+  
 }
 //fim dos letreiros
 
@@ -752,13 +819,27 @@ ion-button,
 .carousel-page:nth-child(7) {
   background-color: #fff;
 }
+//
+ion-checkbox {
+  --size: 24px;
+  --checkbox-background-checked: #0e2b52;
+  font-size: 18px;
+  a{
+    color: #0e2b52 !important;
+    text-decoration: underline;
+  }
 
+}
+ion-checkbox::part(container) {
+  border: 2px solid #0e2b52;
+}
 //letreiros
 .carousel-title-page-7{
   font-size: 32px;
   span{
     font-weight: 800;
   }
+  margin-top: 30%;
 }
 #btIniciarApp{
   margin-bottom: 5%;
@@ -771,10 +852,9 @@ ion-button,
   height: 50px;
   font-size: 18px;
   font-weight: 600;
-  
 }
 #btSairApp{
-  margin-bottom: 60%;
+  margin-bottom: 30%;
   --background: transparent;
   --color: #0e2b52;
   --border-radius: 20px;
@@ -793,6 +873,473 @@ ion-button,
 
 //FIM DO SWIPPER.SCSS
 
+//-----------------------------------------------//
+
+//CONFIG-INICIAL.SCSS
+
+//titulos
+#titulo-config-inicial{
+  text-align: center;
+  font-size: 22px;
+  font-weight: 700;
+  color: #0e2b52;
+  margin-top: 130px;
+}
+#subtitulo-config-inicial{
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  color: #0e2b52;
+  margin-top: -10px;
+  margin-bottom: -10px;
+}
+//fim dos titulos
+
+//localização
+
+//btLocalização
+#btLocalizacao{
+  margin: auto;
+  --background: #0e2b52;
+  --color: #fff;
+  --border-radius: 360px;
+  border-radius: 300px;
+  width: 60px;
+  height: 60px;
+  font-size: 12px;
+  font-weight: 400;
+}
+#icon-localizacao{
+  font-size: 28px;
+}
+#letreiro-btLocalizacao{
+  font-size: 20px;
+  text-align: center;
+  color: #0e2b52;
+  font-weight: 400;
+}
+//fim do btLocalização
+
+//texto entre button e input
+#text-entre-2{
+  text-align: center;
+  font-size: 20px;
+  margin: 10px 0px 15px 0px;
+  font-weight: 400;
+  color: #0e2b52;
+}
+//fim do texto entre button e input
+
+//search bar
+ .input-barra {
+    width: 80%;
+    margin: auto;
+  }
+  .input-texto {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #0e2b52;
+    width: 100%;
+  }
+  .icon-search {
+    width: max-content;
+    color: #0e2b52;
+    padding-top: 10px;
+  }
+  .icon {
+    font-size: 24px;
+  }
+  .lock-icon {
+    transition: all 1s ease-in-out;
+    transform: scale(1);
+  }
+  .lock-icon:active {
+    transform: scale(0.9);
+  }
+  
+  //Animação quando focus
+  .lock-icon {
+    animation-duration: 0.3s;
+    animation-fill-mode: both;
+  }
+  @keyframes bounce {
+    0%,
+    100% {
+      transform: scale(1);
+    }
+  
+    50% {
+      transform: scale(1.2);
+    }
+  }
+  .lock-icon-animate {
+    animation-name: bounce;
+  }
+  .wave-group {
+    width: 100%;
+    position: relative;
+  }
+  .wave-group .input-tecido {
+    font-size: 16px;
+    padding: 15px 10px 10px 5px;
+    display: block;
+    width: 100%;
+    border: none;
+    color: #0e2b52;
+    background: transparent;
+    font-weight: 300;
+  }
+  .wave-group .input-tecido:focus {
+    outline: none;
+  }
+  .wave-group .label {
+    color: #0e2b52;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 10px;
+    top: 14px;
+    display: flex;
+    font-weight: 400;
+  }
+  .wave-group .label-char {
+    transition: 0.2s ease all;
+    transition-delay: calc(var(--index) * .02s);
+  }
+  .wave-group .input-tecido:focus~label .label-char,
+  .wave-group .input-tecido:valid~label .label-char {
+    transform: translateY(-22px) translateX(-45px);
+    font-size: 14px;
+    color: #0e2b52;
+  }
+  .input-tecido::placeholder {
+    opacity: 0;
+    color: #0e2b5277;
+  }
+
+  //Mostra o placeholder apenas quando o input está em foco
+  .input-tecido:focus::placeholder {
+    opacity: 1;
+  }
+  .input-tecido::placeholder {
+    transition: opacity .4s ease;
+  }
+
+  //barra embaixo
+  .bar {
+    position: relative;
+    display: block;
+    width: 100%;
+    background-color: #0e2b52;
+    height: 0px;
+    bottom: 0px;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
+  }
+  
+  .bar::before,
+  .bar::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 0;
+    height: 3px;
+    background-color: #0e2b52;
+    transition: 0.4s ease all;
+  }
+  
+  .bar::before {
+    left: 50%;
+  }
+  
+  .bar::after {
+    right: 50%;
+  }
+  
+  .input-barra:focus-within .bar::before,
+  .input-barra:focus-within .bar::after {
+    width: 50%;
+  }
+//fim da search bar
+
+//fim da localização
+
+//letreiro distancia maxima
+#titulo-distancia-inicial{
+  width: max-content;
+  margin: auto;
+  text-align: left;
+  font-size: 22px;
+  font-weight: 400;
+  color: #0e2b52;
+  margin-top: 70px
+}
+//fim do letreiro distancia maxima
+
+//range-bar
+ion-range{
+  width: 70%;
+  margin: auto;
+  margin-top: 30px;
+  scale: 1.2;
+}
+ion-range::part(tick) {
+  background: #0e2b52;
+}
+ion-range::part(tick-active) {
+  background: transparent;
+}
+ion-range::part(pin) {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: #0e2b52;
+  color: #fff;
+  border-radius: 50%;
+  transform: scale(1.01);
+  top: -25px;
+  min-width: 45px;
+  height: 30px;
+  transition: transform 120ms ease, background 120ms ease;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  left: -5px;
+  
+  /* Adiciona a setinha */
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid #0e2b52;
+  }
+}
+ion-range::part(pin)::before {
+  content: none;
+}
+ion-range::part(knob) {
+  background: #0e2b52;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+}
+ion-range::part(bar) {
+  background: #0e2b5266;
+}
+ion-range::part(bar-active) {
+  background: #0e2b52;
+}
+#text-10km{
+  font-size: 16px;
+}
+#text-100km{
+  font-size: 16px;
+}
+//fim da range-bar
+
+//botao de salvar
+#btSalvarConfig{
+  --background: #0e2b52;
+  --color: #fff;
+  --border-radius: 20px;
+  border-radius: 22px;
+  border: 3px solid #d9d9d9;
+  width: 70%;
+  height: 50px;
+  font-size: 18px;
+  font-weight: 600;
+}
+//fim do botao de salvar
+
+//nota
+#nota-config-inicial{
+  text-align: center;
+  font-size: 12px;
+  color: #0e2b5277;
+  font-weight: 800;
+}
+//fim da nota
+
+//FIM DO CONFIG-INICIAL.SCSS
+
+//-----------------------------------------------//
+
+//AVISO-DADOS.SCSS
+#titulo-aviso-dados{
+  color: #0e2b52;
+  font-size: 22px;
+  font-weight: 800;
+  margin-top: 150px;
+}
+#texto-aviso-dados{
+  color: #0e2b52;
+  font-size: 20px;
+  span{
+    font-weight: 800;
+  }
+}
+#smile-light{
+  width: 300px;
+  height: 300px;
+  margin-left: 20px;
+}
+#smile-dark{
+  width: 0px;
+  height: 0px;
+  margin-left: 0px;
+}
+#btAvancar{
+  --background: #0e2b52;
+  --color: #fff;
+  --border-radius: 20px;
+  border-radius: 22px;
+  border: 3px solid #d9d9d9;
+  width: 200px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+//FIM DO AVISO-DADOS.SCSS
+
+//-----------------------------------------------//
+
+//AVISO-DADOS.SCSS
+#titulo-aviso-dados{
+  color: #0e2b52;
+  font-size: 22px;
+  font-weight: 800;
+  margin-top: 150px;
+}
+#texto-aviso-dados{
+  color: #0e2b52;
+  font-size: 20px;
+  span{
+    font-weight: 800;
+  }
+}
+#smile-light{
+  width: 300px;
+  height: 300px;
+  margin-left: 20px;
+}
+#smile-dark{
+  width: 0px;
+  height: 0px;
+  margin-left: 0px;
+}
+#btAvancar{
+  --background: #0e2b52;
+  --color: #fff;
+  --border-radius: 20px;
+  border-radius: 22px;
+  border: 3px solid #d9d9d9;
+  width: 200px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+//FIM DO AVISO-DADOS.SCSS
+
+//-----------------------------------------------//
+
+//TELEFONES.SCSS.SCSS
+.aviso-telefones{
+  width: 100%;
+  height: 80px;
+  background-color: #ccd5df;
+  display: flex;
+  justify-content: space-between;
+}
+.div-titulo-telefones{
+  color: #0e2b52;
+  font-size: 20px;
+
+  width: 80%;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 40px;
+  span{
+    text-align: left;
+  }
+}
+.div-warning-triangle{
+  width: 20%;
+  color: #a4071a;
+  font-size: 64px;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+#titulo-telefones{
+  font-size: 24px;
+  font-weight: 1000;
+  color: #0e2b52;
+  text-align: center;
+  margin-top: 40px;
+}
+.card-telefones{
+  background: #d8dde3 !important;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px !important;
+  --ion-item-background: #d8dde3;
+  --ion-border-color: #d8dde3;
+  ion-card-content{
+    padding: 4px 10px 4px 10px !important; 
+  }
+  .informacoes-div > p{
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    color: #0e2b52;
+  }
+  .informacoes-div > p > span{
+    font-weight: 600;
+  }
+  .informacoes-div > h1{
+    margin: 0;
+    padding: 0;
+    margin: 0 0 2px 0;
+    font-size: 20px;
+    color: #0e2b52;
+    font-weight: 800;
+  }
+  ion-thumbnail{
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  } 
+  #ambulancia-light{
+    width: 70px;
+  }
+  #ambulancia-dark{
+    width: 0px;
+  }
+  #bombeiro-light{
+    width: 70px;
+  }
+  #bombeiro-dark{
+    width: 0px;
+  }
+  #policia-light{
+    width: 70px;
+  }
+  #policia-dark{
+    width: 0px;
+  }
+}
+
+//FIM DO TELEFONES.SCSS
+
+//-----------------------------------------------//
 
 /* ------------ FIM DO LIGHT MODE ------------ */
 
@@ -825,19 +1372,27 @@ body.dark {
 body.dark tabs-page ion-tab-bar,
 body.dark .ion-page ion-tab-bar {
   --background: #1e1e1e !important;
-  --color: #fff !important;
-  --color-selected: #b1c2d8;
+  --color: #ffffff66 !important;
+  --color-selected: #fff;
 }
 
 //titulos do header
 body.dark .titulos-container {
-  color: #f5f5f5;
+  color: #fff;
 }
 
 //background do footer
 body.dark .footer-paths {
   background-color: #1a1a1a;
 }
+
+//spinner de carregamento
+body.dark .loading-container {
+  ion-spinner {
+    color: #fff;
+  }
+}
+//fim do spinner
 
 //FIM DO HTML GERAL
 
@@ -887,7 +1442,7 @@ body.dark .confirmarAction{
 body.dark #titulo-cards-home{
   color: #fff;
 }
-body.dark ion-card {
+body.dark .card-home {
   background-color: #1a1a1a;
   border: 3px solid #fff;
   border-radius: 10px;
@@ -1155,8 +1710,28 @@ body.dark .carousel-page:nth-child(6) {
 }
 
 //
-body.dark .dedo-apontado-6{
-  color: #fff;
+body.dark .ion-toolbar-swipper{
+  background-color: #1a1a1a;
+  
+  .titulos-container-swipper{
+    color: #fff;
+  }
+}
+body.dark .popover-swipper{
+    background-color: #1e1e1e; 
+}
+body.dark #botao-toolbar-swipper{
+    color: #fff !important;
+}
+body.dark #seta-light{
+  display: none;
+  width: 0px;
+  height: 0px;
+}
+body.dark #seta-dark{
+  display: block;
+  width: 70px;
+  height: 70px;
 }
 
 //letreiros
@@ -1178,7 +1753,17 @@ body.dark .carousel-footer-page-6{
 body.dark .carousel-page:nth-child(7) {
   background-color: #121212;
 }
-
+body.dark ion-checkbox {
+  color: #fff;
+  --checkbox-background: #121212;
+  --checkbox-background-checked: #121212;
+  a{
+    color: #fff !important;
+  }
+}
+body.dark ion-checkbox::part(container) {
+  border: 2px solid #fff;
+}
 //letreiros
 body.dark .carousel-title-page-7{
   color: #fff;
@@ -1199,5 +1784,197 @@ body.dark #btSairApp{
 
 //FIM DO SWIPPER.SCSS
 
+//-----------------------------------------------//
+
+//CONFIG-INICIAL.SCSS
+
+//titulos
+body.dark #titulo-config-inicial{
+  color: #fff;
+}
+body.dark #subtitulo-config-inicial{
+  color: #fff;
+}
+//fim dos titulos
+
+//localização
+
+//btLocalização
+body.dark #btLocalizacao{
+  --color: #fff;
+}
+//fim do btLocalização
+
+//texto entre button e input
+body.dark #text-entre-2{
+  color: #fff;
+}
+//fim do texto entre button e input
+
+//search bar
+  body.dark .input-texto {
+    border-bottom: 1px solid #fff;
+  }
+  body.dark .icon-search {
+    color: #fff;
+  }
+  body.dark .wave-group .input-tecido {
+    color: #fff;
+  }
+  body.dark .wave-group .label {
+    color: #fff;
+  }
+  body.dark .wave-group .input-tecido:focus~label .label-char,
+  body.dark .wave-group .input-tecido:valid~label .label-char {
+    color: #fff;
+  }
+  body.dark .input-tecido::placeholder {
+    opacity: 0;
+    color: #ffffff77;
+  }
+
+  //barra embaixo
+  body.dark .bar {
+    background-color: #fff;
+  }
+  
+  body.dark .bar::before,
+  body.dark .bar::after {
+    background-color: #fff;
+  }
+//fim da search bar
+
+//fim da localização
+
+//letreiro distancia maxima
+body.dark #titulo-distancia-inicial{
+  color: #fff;
+}
+//fim do letreiro distancia maxima
+
+//range-bar
+body.dark ion-range::part(tick) {
+  background: #fff;
+}
+body.dark ion-range::part(pin) {
+  background: #fff;
+  color: #0e2b52;
+  
+  /* Adiciona a setinha */
+  &::after {
+    border-top: 6px solid #fff;
+  }
+}
+body.dark ion-range::part(knob) {
+  background: #fff;
+}
+body.dark ion-range::part(bar) {
+  background: #ffffff66;
+}
+body.dark ion-range::part(bar-active) {
+  background: #fff;
+}
+//fim da range-bar
+
+//botao de salvar
+body.dark #btSalvarConfig{
+  --background: #fff;
+  --color: #0e2b52;
+  border: 3px solid #d9d9d9;
+}
+//fim do botao de salvar
+
+//nota
+body.dark #nota-config-inicial{
+  text-align: center;
+  font-size: 12px;
+  color: #ffffff55;
+  font-weight: 600;
+}
+//fim da nota
+
+//FIM DO CONFIG-INICIAL.SCSS
+
+//-----------------------------------------------//
+
+//AVISO-DADOS.SCSS
+body.dark #titulo-aviso-dados{
+  color: #fff;
+  font-size: 22px;
+  font-weight: 800;
+  margin-top: 150px;
+}
+body.dark #texto-aviso-dados{
+  color: #fff;
+  font-size: 20px;
+  span{
+    font-weight: 800;
+  }
+}
+body.dark #smile-light{
+  width: 0px;
+  height: 0px;
+  margin-left: 0px;
+}
+body.dark #smile-dark{
+  width: 300px;
+  height: 300px;
+  margin-left: 20px;
+}
+body.dark #btAvancar{
+  --background: #fff;
+  --color: #0e2b52;
+}
+//FIM DO AVISO-DADOS.SCSS
+
+//-----------------------------------------------//
+
+//TELEFONES.SCSS
+body.dark .aviso-telefones{
+  width: 100%;
+  height: 80px;
+  background-color: #1a1a1a;
+  display: flex;
+  justify-content: space-between;
+}
+body.dark .div-titulo-telefones{
+  color: #fff;
+}
+body.dark #titulo-telefones{
+  color: #fff;
+}
+body.dark .card-telefones{
+  background: #1a1a1a !important; 
+  --ion-item-background: #1a1a1a;
+  --ion-border-color: #1a1a1a;
+  .informacoes-div > p{
+    color: #fff;
+  }
+  .informacoes-div > h1{
+    color: #fff;
+  }
+  #ambulancia-light{
+    width: 0px;
+  }
+  #ambulancia-dark{
+    width: 70px;
+  }
+  #bombeiro-light{
+    width: 0px;
+  }
+  #bombeiro-dark{
+    width: 70px;
+  }
+  #policia-light{
+    width: 0px;
+  }
+  #policia-dark{
+    width: 70px;
+  }
+}
+
+//FIM DO TELEFONES.SCSS
+
+//-----------------------------------------------//
 
 /* ------------ FIM DO DARK MODE ------------ */
