feito logica do swipper, tela de logo etc

--- a/src/app/pages/subpages/aviso-dados/aviso-dados.page.html
+++ b/src/app/pages/subpages/aviso-dados/aviso-dados.page.html
@@ -46,7 +46,7 @@
     <ion-row>
       <ion-col>
         <div class="textos">
-          <ion-button id="btAvancar">Avançar</ion-button>
+          <ion-button id="btAvancar" (click)="irHome()">Avançar</ion-button>
         </div>
       </ion-col>
     </ion-row>
