--- a/src/global.scss
+++ b/src/global.scss
@@ -100,6 +100,13 @@ ion-tab-bar {
 
 //FIM DO HTML GERAL
 
+//-----------------------------------------------//
+
+//TELA-LOGO.SCSS
+.div-img-tela-logo{
+  background-color: #0e2b52;
+}
+//FIM DA TELA-LOGO.SCSS
 
 //-----------------------------------------------//
 
@@ -1395,6 +1402,14 @@ body.dark .loading-container {
 //fim do spinner
 
 //FIM DO HTML GERAL
+
+//-----------------------------------------------//
+
+//TELA-LOGO.SCSS
+body.dark .div-img-tela-logo{
+  background-color: #121212;
+}
+//FIM DA TELA-LOGO.SCSS
 
 //-----------------------------------------------//
 
