--- a/src/app/pages/subpages/config-inicial/config-inicial.page.html
+++ b/src/app/pages/subpages/config-inicial/config-inicial.page.html
@@ -22,12 +22,12 @@
         <div class="div-btLocalizacao">
           <div class="separacao">
             <div class="div-botoes">
-              <ion-button id="btLocalizacao">
+              <ion-button id="btLocalizacao" (click)="usarLocalizacaoAtual()">
                 <i class="bi bi-geo-alt-fill" id="icon-localizacao"></i>
               </ion-button>
             </div>
             <div class="div-span">
-              <span id="letreiro-btLocalizacao">Usar minha localização atual<a id="asterisco">*</a></span>
+              <span id="letreiro-btLocalizacao">Usar minha localização atual</span>
             </div>
           </div>
         </div>
@@ -43,7 +43,9 @@
               </ion-buttons>
             </div>
             <div class="wave-group">
-              <input required="" type="text" class="input-tecido" placeholder="Ex.: Rua da Alegria, 123">
+              <input required type="text" class="input-tecido" placeholder="Ex.: Rua da Alegria, 123"
+                [(ngModel)]="enderecoManual" [class]="class_enderecoManual" errorText="Preencha os campos corretamente"
+                (focus)="usandoLocalizacaoAtual = false">
               <label class="label">
                 <span class="label-char" style="--index: 0">P</span>
                 <span class="label-char" style="--index: 1">e</span>
@@ -64,7 +66,7 @@
                 <span class="label-char" style="--index: 17">e</span>
                 <span class="label-char" style="--index: 18">ç</span>
                 <span class="label-char" style="--index: 19">o</span>
-                <span class="label-char" id="asterisco" style="--index: 20">*</span>
+
               </label>
             </div>
           </div>
