--- a/src/app/pages/subpages/tela-logo/tela-logo.page.scss
+++ b/src/app/pages/subpages/tela-logo/tela-logo.page.scss
@@ -5,10 +5,10 @@ ion-content{
         overflow: hidden !important;
     }
 }
-.div-img{
+.div-img-tela-logo{
     width: 100%;
     height: 100%;
-    background-color: #0e2b52; // Mantém a cor original
+     // Mantém a cor original
     position: absolute;
     display: flex;
     align-items: center;
@@ -138,7 +138,7 @@ img{
 }
 
 // ANIMAÇÃO DE SAÍDA ATUALIZADA - SEM TELA PRETA
-.div-img.exiting {
+.div-img-tela-logo.exiting {
     // Remove a opacidade do background para não ficar preto
     animation: healthExit 1s ease-in-out forwards;
     
