--- a/src/app/pages/subpages/swipper/swipper.page.html
+++ b/src/app/pages/subpages/swipper/swipper.page.html
@@ -77,7 +77,7 @@
                     </ion-thumbnail>
                     <div class="informacoes-div-swipper">
                       <h1>UPA Exemplo - 3,5 km </h1>
-                      <p><i class="bi bi-geo-alt-fill icon-text-swipper"></i>&nbsp; Tempo Ida: <span>10 min</span></p>
+                      <p><i class="bi bi-car-front-fill icon-text-swipper"></i>&nbsp; Tempo Ida: <span>10 min</span></p>
                       <p><i class="bi bi-clock-fill icon-text-swipper"></i>&nbsp; Fila Espera: <span>10 min</span></p>
                     </div>
                   </ion-item>
