--- a/src/app/pages/subpages/swipper/swipper.page.html
+++ b/src/app/pages/subpages/swipper/swipper.page.html
@@ -236,7 +236,7 @@
 
 
             <ion-tab-bar class="tab-bar-swipper">
-              <ion-tab-button tab="home">
+              <ion-tab-button tab="home" class="tab-selected">
                 <i class="bi bi-hospital-fill icons-tab-swipper"></i>
                 Emergência
               </ion-tab-button>
@@ -244,7 +244,7 @@
                 <ion-icon name="map" class="icons-tab-swipper"></ion-icon>
                 Mapa
               </ion-tab-button>
-              <ion-tab-button tab="telefones" class="tab-selected">
+              <ion-tab-button tab="telefones">
                 <ion-icon name="call" class="icons-tab-swipper"></ion-icon>
                 Telefones
               </ion-tab-button>
