--- a/src/app/pages/telefones/telefones.page.html
+++ b/src/app/pages/telefones/telefones.page.html
@@ -38,7 +38,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-card class="card-telefones" button>
+        <ion-card class="card-telefones" button href="tel:192">
 
           <ion-card-content >
 
@@ -68,7 +68,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-card class="card-telefones" button>
+        <ion-card class="card-telefones" button href="tel:193">
 
           <ion-card-content>
 
@@ -98,7 +98,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-card class="card-telefones" button>
+        <ion-card class="card-telefones" button href="tel:190">
 
           <ion-card-content>
 
