resolvido bug da autocomplete bar, maps estar sobreponto footer e algumas funções do dark mode

--- a/src/app/pages/mapa/mapa.page.html
+++ b/src/app/pages/mapa/mapa.page.html
@@ -17,7 +17,7 @@
 </ion-header>
 
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" [scrollX]="false" [scrollY]="false">
   <div #map class="map-container"></div>
 
   <!-- Loading overlay -->
