--- a/src/app/pages/subpages/swipper/swipper.page.html
+++ b/src/app/pages/subpages/swipper/swipper.page.html
@@ -324,11 +324,12 @@
         <div class="popover-swipper">
           <ion-list>
             <ion-item>
-              <ion-label>Opções de Distância</ion-label>
+              <ion-label>localização</ion-label>
+              <ion-note slot="end">Raio: 50km</ion-note>
             </ion-item>
             <ion-item>
               <ion-label>Tema</ion-label>
-              <ion-note slot="end"></ion-note>
+              <ion-note slot="end">{{getCurrentStatus()}}</ion-note>
             </ion-item>
             <ion-item>
               <ion-label>Termos de Uso</ion-label>
